@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Grr</string>
 	<key>CFBundleIconFile</key>
-	<string>rssreader.icns</string>
+	<string>rssreader</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.etoile-project.grr</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,10 +17,30 @@
 	<key>CFBundleSignature</key>
 	<string>GRR </string>
 	<key>CFBundleVersion</key>
-	<string>0.1</string>
+	<string>0.6</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+        <key>NSServices</key>
+        <array> 
+                <dict>  
+                        <key>NSMenuItem</key>
+                        <dict>  
+                                <key>default</key> 
+                                <string>Add as RSS feed source</string>
+                        </dict>
+                        <key>NSMessage</key>
+                        <string>addFeedWithURL</string>
+                        <key>NSPortName</key>
+                        <string>RSSReaderService</string>
+                        <key>NSSendTypes</key>
+                        <array> 
+                                <string>NSURLPboardType</string>
+                                <string>NSStringPboardType</string>
+                                <string>NSFilenamePboardType</string>
+                        </array>
+                </dict>
+        </array>
 </dict>
 </plist>
